--- a/ex6b/index.html
+++ b/ex6b/index.html
@@ -8,62 +8,62 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
-<div class="container mt-3">
-  <h2>This is Alan McDonald's homepage</h2><br>
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">Personal Info</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Education</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Skills</a>
-    </li>
-  </ul>
-  
+ 
+  <div class="container mt-3">
+    <h2>This is Jakkapon's Education</h2><br>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Personal Info</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="education.html">Education</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="skill.html">Skills</a>
+      </li>
+    </ul>
+ 
   <table class="table table-striped">
     <thead>
       <tr>
-		<th></th>
+    <th></th>
         <th>&nbsp;</th>
         <th>&nbsp;</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-		<td rowspan="7"><img src="images/alan.png" class="rounded mx-auto d-block" alt="Alan McDonald" width="200" height="356"></td>
+    <td rowspan="7"><img src="images/alan.png" class="rounded mx-auto d-block" alt="Alan McDonald" width="200" height="356"></td>
         <th>Name:</th>
-        <td>Alan</td>
+        <td>Jakkapon/td>
       </tr>
       <tr>
         <th>Surname:</th>
-        <td>McDonald</td>
+        <td>Luphol>
       </tr>
-	  <tr>
+    <tr>
         <th>Age:</th>
-        <td>22</td>
+        <td>21/</td>
       </tr>
-	  <tr>
+    <tr>
         <th>Birthday:</th>
-        <td>4 August 2000</td>
+        <td>06 january 2004 </td>
       </tr>
-	  <tr>
+    <tr>
         <th>Nationality:</th>
-        <td>British</td>
+        <td>Thailand</td>
       </tr>
-	  <tr>
+    <tr>
         <th>Current Address:</th>
-        <td>126/1 Vibhavadee-Rangsit Rd. Dindaeng BKK 10400</td>
+        <td> - </td>
       </tr>
-	  <tr>
+    <tr>
         <th>Email Address:</th>
-        <td>alan_m@gmail.com</td>
+        <td>tonoscar33@gmail.com</td>
       </tr>
     </tbody>
   </table>
 </div>
-
+ 
 </body>
 </html>
